--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -62,6 +62,12 @@ $eyebrow-font: "Suisse Int'l Mono", "Courier New", Courier, monospace;
     font-size: 1.8rem;
     line-height: 1.8rem;
   }
+  .eyebrow {
+    font-size: 0.9rem;
+    font-family: $eyebrow-font;
+    text-transform: uppercase;
+    letter-spacing: 0.03rem;
+  }
 }
 
 .Footer {
@@ -81,10 +87,9 @@ $eyebrow-font: "Suisse Int'l Mono", "Courier New", Courier, monospace;
 
 .page-content,
 .navbar {
-  .eyebrow,
   .btn.btn-primary,
   .btn.btn-secondary {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     font-family: $eyebrow-font;
     text-transform: uppercase;
     letter-spacing: 0.03rem;
