--- a/src/styles/menu-footer.scss
+++ b/src/styles/menu-footer.scss
@@ -5,7 +5,10 @@
   z-index: 1000;
   right: 1.5rem;
   bottom: 1.5rem;
-
+  @include for-tablet-landscape-down {
+    right: 0.5rem;
+    bottom: 0.5rem;
+  }
   .menu.d-flex {
     width: 100%;
     height: 100%;
